logs/dag_id=create_and_populate_taxigov_datawarehouse/run_id=manual__2022-08-28T23:47:41.658303+00:00/task_id=create_fact_daily_rides_table/attempt=1.log
[2022-08-28 23:48:00,366] {taskinstance.py:1179} INFO - Dependencies all met for <TaskInstance: create_and_populate_taxigov_datawarehouse.create_fact_daily_rides_table manual__2022-08-28T23:47:41.658303+00:00 [queued]>
[2022-08-28 23:48:00,375] {taskinstance.py:1179} INFO - Dependencies all met for <TaskInstance: create_and_populate_taxigov_datawarehouse.create_fact_daily_rides_table manual__2022-08-28T23:47:41.658303+00:00 [queued]>
[2022-08-28 23:48:00,375] {taskinstance.py:1376} INFO - 
--------------------------------------------------------------------------------
[2022-08-28 23:48:00,375] {taskinstance.py:1377} INFO - Starting attempt 1 of 1
[2022-08-28 23:48:00,375] {taskinstance.py:1378} INFO - 
--------------------------------------------------------------------------------
[2022-08-28 23:48:00,387] {taskinstance.py:1397} INFO - Executing <Task(PostgresOperator): create_fact_daily_rides_table> on 2022-08-28 23:47:41.658303+00:00
[2022-08-28 23:48:00,391] {standard_task_runner.py:52} INFO - Started process 3977 to run task
[2022-08-28 23:48:00,393] {standard_task_runner.py:79} INFO - Running: ['***', 'tasks', 'run', 'create_and_populate_taxigov_datawarehouse', 'create_fact_daily_rides_table', 'manual__2022-08-28T23:47:41.658303+00:00', '--job-id', '147', '--raw', '--subdir', 'DAGS_FOLDER/create_and_populate_taxigov_datawarehouse_dag.py', '--cfg-path', '/tmp/tmp_qnt0zfg', '--error-file', '/tmp/tmp1w09z9nn']
[2022-08-28 23:48:00,394] {standard_task_runner.py:80} INFO - Job 147: Subtask create_fact_daily_rides_table
[2022-08-28 23:48:00,436] {task_command.py:371} INFO - Running <TaskInstance: create_and_populate_taxigov_datawarehouse.create_fact_daily_rides_table manual__2022-08-28T23:47:41.658303+00:00 [running]> on host ddc8002727e0
[2022-08-28 23:48:00,492] {taskinstance.py:1591} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=create_and_populate_taxigov_datawarehouse
AIRFLOW_CTX_TASK_ID=create_fact_daily_rides_table
AIRFLOW_CTX_EXECUTION_DATE=2022-08-28T23:47:41.658303+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2022-08-28T23:47:41.658303+00:00
[2022-08-28 23:48:00,500] {base.py:68} INFO - Using connection ID 'redshift_default' for task execution.
[2022-08-28 23:48:07,443] {dbapi.py:231} INFO - Running statement: 
    DROP TABLE IF EXISTS fact_daily_rides;

    CREATE TABLE fact_daily_rides AS (
        SELECT
            DATE(started_at) AS date,
            COUNT(DISTINCT(ride_requests.id)) AS ride_requests_count,
            COUNT(DISTINCT(rides.id)) AS rides_count
            SUM(cost) AS total_rides_cost,
            SUM(cost)/COUNT(DISTINCT(rides_count)) AS average_cost_per_kilometer,
            AVG(
                DATEDIFF(
                    MINUTE,
                    started_at,
                    ended_at
                )
            ) AS average_ride_duration,
            AVG(
                DATEDIFF(
                    MINUTE,
                    requested_at,
                    approved_at
                )
            ) AS average_ride_request_sla,
            AVG(cost) AS average_ride_cost,
            AVG(distance) AS average_ride_distance
        FROM
            dim_rides
        LEFT JOIN 
            dim_requests ON dim_rides.request_id = dim_requests.id
        GROUP BY 
            date
    );, parameters: None
[2022-08-28 23:48:07,948] {taskinstance.py:1909} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 92, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 211, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 235, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "SUM"
LINE 9:             SUM(cost) AS total_rides_cost,
                    ^

[2022-08-28 23:48:07,954] {taskinstance.py:1420} INFO - Marking task as FAILED. dag_id=create_and_populate_taxigov_datawarehouse, task_id=create_fact_daily_rides_table, execution_date=20220828T234741, start_date=20220828T234800, end_date=20220828T234807
[2022-08-28 23:48:07,962] {standard_task_runner.py:97} ERROR - Failed to execute job 147 for task create_fact_daily_rides_table (syntax error at or near "SUM"
LINE 9:             SUM(cost) AS total_rides_cost,
                    ^
; 3977)
[2022-08-28 23:48:08,004] {local_task_job.py:156} INFO - Task exited with return code 1
[2022-08-28 23:48:08,025] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
